--- a/flip.html
+++ b/flip.html
@@ -3,11 +3,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
     <meta charset="utf-8">
-    <title>Job Hunt Simulator</title>
+    <title></title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..800&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@200;300;400;500;600;700&family=Michroma&family=Nabla&family=Orbitron:wght@400;500;700&family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         body {
@@ -17,8 +16,8 @@
             font-size: 14px;
             display: flex;
             flex-direction: column;
-            align-items: flex-start;
-            justify-content: flex-start;
+            align-items: center;
+            justify-content: center;
             background-color:#000;
         }
 
@@ -56,55 +55,59 @@
             
         }
         .glitter {
-                height: 124px;
-                width: 300px;
-                perspective: 500px;
-                position: absolute;
-                top: 20%;
-        }
-        .glitter-inner {
-            position: relative;
-            height: 124px;
-            width: 300px;
-            text-align: center;
-            transition: transform 100ms linear;
-            transform-origin: center center;
-            transform-style: preserve-3d;
-            animation: flip 4s linear 0s infinite forwards;
-        }
-        .glitter:hover .glitter-inner {
-            transform: rotateX(180deg);
-        }
-        .glitter-front, .glitter-back {
-            position: absolute;
-            width: 300px;
-            height: 124px;
-            -webkit-backface-visibility: hidden;
-            backface-visibility: hidden;
-            background-size: contain;
-            background-repeat: no-repeat;
-            transform-origin: center center;
-        }
-        .glitter-front {
-            z-index: 2;
-        }
-        .glitter-back {
-            transform: rotateY(180deg);
-            z-index: 1;
-        }
-        @keyframes flip {
-            0% { transform: rotate3d(0, 0, 0, 0deg); }
-            100% { transform: rotate3d(-2, 0.5, 0.5, 720deg); }
-        }
+    height: 124px;
+    width: 300px;
+    perspective: 500px;
+    position: absolute;
+    top: 20%;
+}
+.glitter-inner {
+    position: relative;
+    height: 124px;
+    width: 300px;
+    text-align: center;
+    transition: transform 100ms linear;
+    transform-origin: center center;
+    transform-style: preserve-3d;
+    animation: flip 4s linear 0s infinite forwards;
+}
+.glitter:hover .glitter-inner {
+    transform: rotateX(180deg);
+}
+.glitter-front, .glitter-back {
+    position: absolute;
+    width: 300px;
+    height: 124px;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    background-size: contain;
+    background-repeat: no-repeat;
+    transform-origin: center center;
+}
+.glitter-front {
+    z-index: 2;
+}
+.glitter-back {
+    transform: rotateY(180deg);
+    z-index: 1;
+}
+@keyframes flip {
+    0% { transform: rotate3d(0, 0, 0, 0deg); }
+    100% { transform: rotate3d(-2, 0.5, 0.5, 720deg); }
+}
     </style>
-    <script src="confetti.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js" integrity="sha512-fD9DI5bZwQxOi7MhYWnnNPlvXdp/2Pj3XSTRrFs5FQa4mizyGLnJcN6tuvUS6LbmgN1ut+XGSABKvjN0H6Aoow==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="confetti.js"></script>
 </head>
 <body>
 <main>
-
+    <div class="glitter">
+        <div class="glitter-inner">
+            <div class='glitter-front'><img src='100front.png' height="124" width="300"></div>
+            <div class='glitter-back'><img src='100back.png' height="124" width="300"></div>
+        </div>
+    </div>
 </main>
-<script src="jobhuntmaze.js"></script>
 <script>
 const $ = str => document.querySelector(str);
 const $$ = str => document.querySelectorAll(str);
@@ -116,6 +119,8 @@ const $$ = str => document.querySelectorAll(str);
             loaded: false
         },
         init: function() {
+            $(".glitter-inner").style.transformOrigin = (Math.random()*300) + ' ' + (Math.random()*124);
+            document.addEventListener("click", app.doClick);
             app.state.loaded = true;
         },
         fetch: function(url, callback) {
@@ -126,6 +131,9 @@ const $$ = str => document.querySelectorAll(str);
                     callback(data);
                 }
             });
+        },
+        doClick: function(e) {
+            addDivConfetti(e);
         },
         display: function(data, tgt) {
             let out = "<table><thead><tr>";
