--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             align-items: flex-start;
             justify-content: flex-start;
             background-color:#000;
+            height: 100vh;
+            width: 100vw;
+            overflow: hidden;
         }
 
         header {
